# ai-content-detector

./: .gitignore  FRONTEND_DEV_PLAN.md  README.md  ai content detector.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  wrangler.jsonc  wrangler.toml
.github/: copilot-instructions.md
.github/workflows/: deploy.yml
backend/: .env  README.md  pyproject.toml
backend/ai_content_detector_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/app/: config.py  main.py  utils.py
backend/app/api/: detect.py
backend/app/schemas/: detect.py
backend/app/services/: detector.py  parser.py
backend/llm_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
cloudflare/: wrangler.toml
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.scss  App.tsx  index.scss  main.tsx
frontend/src/pages/: DetectionPage.tsx  HomePage.tsx  NotFoundPage.tsx  ResultPage.tsx
frontend/src/services/: api.ts
frontend/src/stores/: useAppStore.ts  useDetectionStore.ts  useUploadStore.ts
frontend/src/styles/: _mixins.scss  _variables.scss
frontend/src/types/: index.ts
src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
src/app/detection/: page.tsx
src/app/result/: page.tsx
src/components/business/: HighlightedText.tsx  ParagraphItem.tsx
src/components/ui/: AntdProvider.tsx  Footer.tsx  Header.tsx  icons.tsx
src/lib/: detector.ts  parser.ts
src/stores/: useAppStore.ts  useDetectionStore.ts  useUploadStore.ts
src/types/: index.ts
(+8 files in other folders)
