[project]
name = "ai-content-detector-backend"
version = "0.1.0"
description = "Backend API for AI Content Detector - detects AI-generated content in academic papers"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.12",
    "python-dotenv>=1.0.0",
    "python-docx>=1.1.0",
    "PyMuPDF>=1.18.0",
]

[project.scripts]
dev = "app.main:main"

[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"
